--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,14 @@
     <string name="search_news_api">http://166.111.68.66:2042/news/action/query/search</string>
     <string name="get_news_detail_api">http://166.111.68.66:2042/news/action/query/detail</string>
 
+    <string name="news_detail">News Detail</string>
+
     <string name="home">Home</string>
     <string name="favorite">Favorite</string>
     <string name="settings">Settings</string>
+
+    <string name="share">Share</string>
+    <string name="star">Star</string>
 
     <string name="latest">Latest</string>
     <string name="technology">Technology</string>
