--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,7 @@
     <string name="contributors">Contributors</string>
     <string name="contributors_desc">https://github.com/AmadeusChan/AndroidAppProject/graphs/contributors</string>
     <string name="about">About</string>
+
+    <string name="text_only_mode">TEXT_ONLY_MODE</string>
+    <string name="text_only_key">TEXT_ONLY_KEY</string>
 </resources>
