--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,10 @@
     <string name="home">Home</string>
     <string name="favorite">Favorite</string>
     <string name="settings">Settings</string>
+    <string name="channel">Channel</string>
+
+    <string name="my_channel">My Channel</string>
+    <string name="more_channel">More Channel</string>
 
     <string name="share">Share</string>
     <string name="star">Star</string>
