--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="share">Share</string>
     <string name="star">Star</string>
     <string name="read">Read</string>
+    <string name="ban">Ban</string>
 
     <string name="latest">Latest</string>
     <string name="technology">Technology</string>
