--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,8 +21,8 @@
     <string name="share">Share</string>
     <string name="star">Star</string>
     <string name="read">Read</string>
-    <string name="ban">Ban</string>
-
+<!--    <string name="ban">Ban</string>
+-->
     <string name="share_to_wechat">Share to WeChat</string>
     <string name="share_to_weibo">Share to Weibo</string>
     <string name="share_to_moment">Share to timeline</string>
