--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndroidAppProject</string>
+    <string name="app_name">31_陈经基</string>
 
     <string name="get_latest_news_api">http://166.111.68.66:2042/news/action/query/latest</string>
     <string name="search_news_api">http://166.111.68.66:2042/news/action/query/search</string>
